2005-07-21  John McCutchan  <jmc@cvs.gnome.org>

	* server/gam_connection.c: (gam_connection_set_pid): It's fclose not
	f_close ...

2005-07-21  John McCutchan  <jmc@cvs.gnome.org>

	* python/tests/flood.py: Enable debug output while I work at fixing
	inotify bug.
	* server/gam_connection.c: (gam_connection_close),
	(gam_connection_get_pidname), (gam_connection_set_pid),
	(gam_connection_request), (gam_send_event), (gam_send_ack),
	(gam_connections_debug): Output process name instead of pid on Linux.
	Everyone else still gets pid.
	* server/gam_connection.h:
	* server/gam_poll.c: (gam_poll_emit_event), (poll_file),
	(gam_poll_scan_directory_internal): Move more debug output under
	GAM_VERBOSE_POLL define.

2005-07-21  John McCutchan  <jmc@cvs.gnome.org>

	* server/gam_inotify.c: (gam_inotify_directory_handler_internal): Fix
	locking bug.

2005-07-21  John McCutchan  <jmc@cvs.gnome.org>

	* server/gam_inotify.c: (gam_inotify_read_handler),
	(gam_inotify_rm_watch), (gam_inotify_read_events): New function that
	tries hard to read events from inotify in large chunks. Big
	CPU usage decrease with dd if=/dev/zero of=test!

2005-07-21  John McCutchan  <jmc@cvs.gnome.org>

	* python/tests/basic4.py:
	* python/tests/basic6.py:
	* python/tests/multiple2.py:
	* python/tests/noexists.py:
	* python/tests/nokernel.py:
	* python/tests/readonly.py: Cleanup debug output
	* server/gam_inotify.c: (gam_inotify_directory_handler_internal),
	(gam_inotify_read_handler), (gam_inotify_init),
	(gam_inotify_remove_all_for), (gam_inotify_add_watch),
	(gam_inotify_rm_watch):  More inotify backend cleanups
	* server/local_inotify_syscalls.h: Local header that defines the
	inotify system calls for x86 and x86-64 architectures. Other
	architectures get dummy functions.

Wed Jul 13 18:51:44 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c: applied patch from Jean-Yves Lefort
	  for compilation on gcc < 3.0
