@@ -38,7 +38,6 @@ gam_server_SOURCES =					\
 	gam_excludes.c					\
 	gam_excludes.h					\
 	local_inotify.h					\
-	gam_debug_lists.c				\
 	server_config.h
 
 if ENABLE_INOTIFY
